test/functions/deitz/test_var_function1.good
test_var_function1.chpl:5: In function 'bar':
test_var_function1.chpl:6: error: illegal expression to return by ref
